# itt-common

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/actions/test-qt/: action.yaml
.github/workflows/: deploy.yml  test.yml
src/itaxotools/__pyinstaller/: __init__.py  hook-itaxotools.common.py
src/itaxotools/common/: bindings.py  io.py  machine.py  threading.py  types.py  utility.py
src/itaxotools/common/param/: __init__.py  core.py  model.py  view.py
src/itaxotools/common/resources/: __init__.py
src/itaxotools/common/widgets/: __init__.py  dialogs.py  graphics.py  widgets.py
tests/: test_bindings.py
