[build-system]
requires = ["setuptools", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "itaxotools-common"
dynamic = ["version"]
description = "Common resources for iTaxoTools"
readme = "README.md"
requires-python = ">=3.10.2, <4"
keywords = []
authors = [
    { name = "StefanPatman", email = "stefanpatman91@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "setuptools-git-versioning",
    "pre-commit",
    "ruff",
    "pytest",
    "pytest-qt",
    "pytest-xvfb",
    "pyinstaller",
]
gui =[
    "pyside6"
]

[project.entry-points.pyinstaller40]
hook-dirs = "itaxotools.__pyinstaller:get_hook_dirs"
tests = "itaxotools.__pyinstaller:get_PyInstaller_tests"

[project.urls]
Homepage = "https://github.com/StefanPatman"
Source = "https://github.com/StefanPatman/pypi-test"

[tool.setuptools-git-versioning]
dirty_template = "{tag}"
enabled = true

[tool.ruff]
extend-select = ["I"]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "pyqt",
    "standard-library",
    "first-party",
    "local-folder",
    "third-party"
]

[tool.ruff.lint.isort.sections]
"pyqt" = ["PySide6"]
